[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Transition_Handler.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Title_Screen.tscn" type="PackedScene" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Transition_Handler" parent="." instance=ExtResource( 2 )]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Title_Screen" parent="HUD" instance=ExtResource( 3 )]

[node name="World" type="Node2D" parent="."]

[connection signal="start_game" from="HUD/Title_Screen" to="." method="_on_Title_Screen_start_game"]
